# rustache

./: Cargo.toml  README.md  shell.nix
src/: _main.rs  _old_parser.rs  encoder.rs  lexer.rs  lib.rs  main.rs  node.rs  parser.rs
tests/: spec.rs
tests/common/: mod.rs
views/: fruit.mustache  hello.mustache  index.mustache  lily.mustache  test.mustache
views/layouts/: base.mustache
