workspace = { members = ["rustache_derive"] }
[package]
name = "rustache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
crossbeam-channel = "0.5.12"
glob = "0.3.1"
html-escape = "0.2.13"
rayon = "1.10.0"
substring = "1.4.5"
thiserror = "1.0.58"
serde = "1.0.0"

[dev-dependencies]
serde_derive = "1.0.0"
